deployments/kubernetes/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: reddservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: reddtsai/reddservice-gateway:v0.0.5
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /app/conf.d/config.yaml
              subPath: config.yml
      volumes:
        - name: config-volume
          configMap:
            name: gateway-configmap

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: reddservice
  labels:
    istio-injection: enabled
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: reddtsai/reddservice-auth:v0.0.5
          ports:
            - containerPort: 80
            - containerPort: 50051
          volumeMounts:
            - name: config-volume
              mountPath: /app/conf.d/config.yaml
              subPath: config.yml
          livelinessProbe:
            httpGet:
              path: /_/healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /_/readyz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: config-volume
          configMap:
            name: auth-configmap

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: reddservice
  name: pgpool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgpool
  template:
    metadata:
      labels:
        app: pgpool
    spec:
      containers:
        - name: pgpool
          image: pgpool/pgpool
          volumeMounts:
            - name: pgpool-config-volume
              mountPath: /config
      volumes:
        - name: pgpool-config-volume
          configMap:
            name: pgpool-configmap
