deployments/kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  namespace: reddservice
  name: gateway-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: gateway

---
apiVersion: v1
kind: Service
metadata:
  namespace: reddservice
  name: auth-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
  selector:
    app: auth

---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: auth-destinationrule
  namespace: reddservice
spec:
  host: auth-service.reddservice.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN

---
apiVersion: v1
kind: Service
metadata:
  namespace: reddservice
  name: pgpool-service
spec:
  selector:
    app: pgpool
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 9999

---
